--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,17 @@ optax==0.0.9
 numpy>=1.17
 
 # for TDD
-pytest==6.2.4
-mock==4.0.3
+# pytest==6.2.4
+# mock==4.0.3
 
 # For research (to remove later)
-jupyterlab==3.0.16
+# jupyterlab==3.0.16
+
+# 
+-f https://download.pytorch.org/whl/torch_stable.html
+tqdm
+sklearn
+streamlit==0.84.1
+torch==1.9.0+cpu
+
+streamlit>=0.84.1
